# ursamirror

./: .gitignore  README.md  _version.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
analysis_scripts/: age_region.py  emulated_stars.py  non_harmonized_data.py  ts_clustering.py  zscored_comp.py
simulated_data/: sim_participant_001.csv  sim_participant_002.csv  sim_participant_003.csv  sim_participant_004.csv  sim_participant_005.csv  sim_participant_006.csv  sim_participant_007.csv  sim_participant_008.csv  sim_participant_009.csv  sim_participant_010.csv  sim_participant_011.csv  sim_participant_012.csv  sim_participant_013.csv  sim_participant_014.csv  sim_participant_015.csv  sim_participant_016.csv  sim_participant_017.csv  sim_participant_018.csv  sim_participant_019.csv  sim_participant_020.csv  sim_participant_021.csv  sim_participant_022.csv  sim_participant_023.csv  sim_participant_024.csv  sim_participant_025.csv  sim_participant_026.csv  sim_participant_027.csv  sim_participant_028.csv  sim_participant_029.csv  sim_participant_030.csv  sim_participant_031.csv  sim_participant_032.csv  sim_participant_033.csv  sim_participant_034.csv  sim_participant_035.csv  sim_participant_036.csv  sim_participant_037.csv  sim_participant_038.csv  sim_participant_039.csv  sim_participant_040.csv  (+171 more)
src/ursamirror/: online2std.py  paper2std.py  star_process.py
src/ursamirror/utils/: utils.py
